k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlflow-serving
  namespace: ml-serving
  labels:
    app: mlflow-serving
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mlflow-serving
  template:
    metadata:
      labels:
        app: mlflow-serving
    spec:
      containers:
        - name: mlflow-serving
          image: rcabe005/mlflow-serving:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 20
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 6
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "300m"
              memory: "512Mi"
