k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mlflow-serving
  namespace: ml-serving
spec:
  selector:
    app: mlflow-serving
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
