k8s/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mlflow-serving
  namespace: ml-serving
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
    - host: mlflow-serving.192.168.1.121.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mlflow-serving
                port:
                  number: 8000
